--- a/style.css
+++ b/style.css
@@ -1231,9 +1231,9 @@ hr {
     gap: 20px;
     justify-content: space-between;
     margin-bottom: 40px;
-}
+} */
 
-.temple-gallery img,
+ .temple-gallery img,
 .travel-gallery img {
     width: 32%;
     height: auto;
@@ -1241,7 +1241,7 @@ hr {
     border: 1px solid #ccc;
     cursor: pointer;
     object-fit: cover;
-}
+} 
 
 .temple-section p,
 .travel-section p {
@@ -1250,6 +1250,25 @@ hr {
     margin-bottom: 20px;
     text-align: justify;
 }
+
+
+.travel-card,
+.temple-card {
+    flex: 1;
+    min-width: 25%;
+    max-width: 30%;
+}
+
+.travel-card img,
+.temple-card img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 5px; 
+  cursor: pointer;
+}
+
+
 
 /* Lightbox for temple and travel page */
 #lightbox {
@@ -1356,6 +1375,7 @@ hr {
     object-fit: cover;
     display: block;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 /* Styling cultural dance section */
@@ -1410,6 +1430,7 @@ hr {
     object-fit: cover;
     display: block;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .festival-card p,
@@ -1423,7 +1444,8 @@ hr {
 
 .festival-card .image-credit,
 .cultural-card .image-credit,
-.map-container .imge {
+.map-container .image-credit,
+.travel-card .image-credit {
     line-height: 1.2;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -1475,12 +1497,14 @@ p {
   }
 
   .festival-gallery,
-  .cultural-gallery {
+  .cultural-gallery,
+  .travel-gallery {
     flex-direction: column;
   }
 
   .festival-card,
-  .cultural-card {
+  .cultural-card,
+  .travel-card {
     max-width: 100%;
   }
 
@@ -1498,13 +1522,15 @@ p {
 /* For tablets */
 @media screen and (max-width: 992px) and (min-width: 601px) {
   .festival-gallery,
-  .cultural-gallery {
+  .cultural-gallery
+  .travel-gallery {
     flex-wrap: wrap;
     
   }
 
   .festival-card,
-  .cultural-card {
+  .cultural-card,
+  .travel-card {
     max-width: 48%;
   }
 
@@ -1516,7 +1542,8 @@ p {
 @media screen and (min-width: 1200px) {
   .festival-section,
   .cultural-dance-section,
-  .culture-gallery-section {
+  .culture-gallery-section
+  .travel-section {
     padding: 100px 100px;
   }
 }
