I can finally sleep now? Finaly animation code is fixed.
i change the link rel and script to
<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>

<link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">

--- a/style.css
+++ b/style.css
@@ -1181,7 +1181,7 @@ hr {
     gap: 20px;
     justify-content: space-between;
     margin-bottom: 40px;
-} */
+} 
 
  .temple-gallery img,
 .travel-gallery img {
@@ -1470,7 +1470,7 @@ p {
 /* For tablets */
 @media screen and (max-width: 992px) and (min-width: 601px) {
   .festival-gallery,
-  .cultural-gallery
+  .cultural-gallery,
   .travel-gallery,
   .temple-gallery {
     flex-wrap: wrap;
